--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.7",
+        "mongodb": "^6.8.0",
         "next": "14.2.5",
         "react": "^18",
         "react-dom": "^18",
