--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.7",
         "@vercel/analytics": "^1.3.1",
+        "@vercel/speed-insights": "^1.0.12",
         "mongodb": "^6.8.0",
         "next": "14.2.5",
         "react": "^18",
